2020-XX-XX 4.1.2

	Bugfixes:

	all : added `contains` and `keyValueIterator` methods to haxe.ds.ReadOnlyArray
	all : fixed super constructor call when extending externs (#7837, #9501)
	all : fixed compiler crash for "--run" argument without a value (#9513)
	all : fixed local variable name collision in `try..catch` (#9533)
	display : fixed completion for out-of-bounds argument in a call (#9435)
	display : fixed "find references" through interfaces (#9470)
	display : optimized "find references" (#9504)
	display : optimized "server/invalidate" requests (#9509)
	analyzer : fixed compiler crash upon handling code branches with enums with optional arguments (#9591)
	jvm : added "--java-lib-extern" to use jar files as externs without adding them to the compiled project (#9515)
	macro : fixed type intersection syntax in macro reification (#9404)
	eval : fixed exception message when catching compiler-generated `haxe.macro.Error` as `Dynamic` (#9600)
	lua : fixed lua code generation without `--main` compilation argument (#9489)
	php : added an overload signature for `session_set_cookie_params` function (#9507)
	nullsafety : fixed various scenarios of `if..else` branching (#9474)

2020-22-05 4.1.1

	New features:

	jvm : added `--jvm path/to.jar` CLI argument

	Bugfixes:

	all : fixed arguments ordering for @:structInit constructors (#9418)
	all : fixed display/references completion server request for static fields (#9440)
	all : fixed "Module not found" error reporting during macro execution in display requests (#9449)
	all : fixed module name completion for target-specific modules like `Mod.js.hx` (#9423)
	all : fixed completion for packages named "function" (#7697)
	all : fixed recursive typedefs with optional arguments in `@:overload` functions (#9455)
	cpp : fixed StringTools.endsWith() for unicode characters (#8980)
	cpp : fixed broken externs in `cpp` package (#9452)
	js/cpp : fixed catch var naming collision (#9413)